--- a/ecommerceApp/templates/ContactUs.html
+++ b/ecommerceApp/templates/ContactUs.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
     <div class="container-fluid">
-      <a class="navbar-brand nav_logo" href="/"><img src="/static/images/Logo2.png" alt=""></i></a>
+      <a class="navbar-brand nav_logo" href="/"><img src="static/images/Logo2.png" alt=""></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
