--- a/ecommerceApp/templates/index.html
+++ b/ecommerceApp/templates/index.html
@@ -8,8 +8,8 @@
   <title>Overseas dream property</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="static/css/style.css">
-  <link rel="icon" href="/static/images/logo2.png" sizes="32x32">
+  <link rel="stylesheet" href=" {% static '/css/style.css' %}">
+  <link rel="icon" href="../static/images/logo2.png" sizes="32x32">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light my_navbar">
