--- a/ecommerceApp/templates/property.html
+++ b/ecommerceApp/templates/property.html
@@ -12,6 +12,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 />
+  <link rel="icon" href="{% static 'images/logo2.png' %}" sizes="32x32">
   <link rel="stylesheet" href="{% static 'css/property copy.css' %}">
 </head>
 <body>
